--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@typescript-eslint/parser": "4.19.0",
     "cypress": "^7.3.0",
     "dotenv": "8.2.0",
+    "electron": "^13.1.6",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
