--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "@nrwl/linter": "12.5.8",
     "@nrwl/tao": "12.5.8",
     "@nrwl/workspace": "12.5.8",
+    "@tailwindcss/forms": "^0.3.3",
+    "@tailwindcss/typography": "^0.4.1",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "4.19.0",
@@ -72,6 +74,7 @@
     "jest": "27.0.3",
     "jest-preset-angular": "9.0.3",
     "prettier": "^2.3.1",
+    "tailwindcss": "^2.2.4",
     "ts-jest": "27.0.3",
     "typescript": "~4.2.4"
   }
