--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular/platform-browser": "^12.0.0",
     "@angular/platform-browser-dynamic": "^12.0.0",
     "@angular/router": "^12.0.0",
+    "@ngrx/effects": "^12.4.0",
     "@ngrx/store": "^12.4.0",
     "@nrwl/angular": "12.5.8",
     "rxjs": "~6.6.0",
