--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@angular/platform-browser": "^12.0.0",
     "@angular/platform-browser-dynamic": "^12.0.0",
     "@angular/router": "^12.0.0",
+    "@ngrx/effects": "^12.4.0",
+    "@ngrx/store": "^12.4.0",
     "@nrwl/angular": "12.5.8",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -76,6 +78,7 @@
     "prettier": "^2.3.1",
     "tailwindcss": "^2.2.4",
     "ts-jest": "27.0.3",
-    "typescript": "~4.2.4"
+    "typescript": "~4.2.4",
+    "eslint-plugin-ngrx": "^1.0.0"
   }
 }
