--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "workspace-generator": "nx workspace-generator",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
-    "electron:serve": "electron ."
+    "electron:dev": "NODE_ENV=develop electron .",
+    "electron:prod": "NODE_ENV=production electron ."
   },
   "private": true,
   "dependencies": {
