--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "electron:dev": "NODE_ENV=develop electron-forge start",
     "electron:prod": "NODE_ENV=production electron-forge start",
     "package": "electron-forge package",
-    "make": "NODE_ENV=production electron-forge make"
+    "make": "electron-forge make"
   },
   "private": true,
   "dependencies": {
